--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root { /*Variables*/
   --mainBackground: #21222a;
   --secondaryBackgroundColor: #120f17 ;
-  --buttonHoverColor: #a0a0a0 ;
+  --buttonHoverColor: #bbbbbb ;
   --textColor: #dcd8d8;
   --textHoverColor: #120f17;
 }
@@ -16,8 +16,9 @@
 
 .navContainer { /*Contains the entire navigation bar*/
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   margin: 0;
+  margin-bottom: 3rem;
   padding: 0rem calc((100vw - 1000px) / 3);
   justify-content: space-between;
   flex-basis: 500px;
@@ -185,3 +186,20 @@
   background: transparent;
   margin: 0.4rem;
 }
+
+/*
+@media screen and (max-width: 541) {
+  
+  .linkBox { 
+    padding: 10px;
+    margin-top: 20px;
+    background: var(--secondaryBackgroundColor);
+    border-radius: 10px;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    height: 1.5rem;
+    margin: 0.15rem;
+  }
+*/
