--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,24 +1,22 @@
-/*Color Variables*/
-$text: rgb(232, 232, 248); /*Off White (Blue tint)*/
-$background: rgb(4, 4, 6); /*Off Black (Blue tint)*/
-$primary: rgb(57, 50, 195); /*Blue*/
-$secondary: rgb(47, 51, 60); /*Gray*/
-$accent: rgb(230, 167, 40); /*Yellow*/
-$accentBackground: rgba(232, 232, 248, 0.1); //10% opacity of $text
-/*Padding Variables*/
+// Color Variables
+$text: rgb(232, 232, 248); // Off White (Blue tint)
+$background: rgb(4, 4, 6); // Off Black (Blue tint)
+$primary: rgb(57, 50, 195); // Blue
+$secondary: rgb(47, 51, 60); // Gray
+$accent: rgb(230, 167, 40); // Yellow
+$accentBackground: rgba(232, 232, 248, 0.1); // 10% opacity of $text
+// Padding Variables
 $LRPadding: calc((100vw - 1000px) / 6);
-/*Font Variables*/
-$lightFont: "Monaspace Neon Light", monospace; /*Secondary font*/
-$boldFont: "Monaspace Neon ExtraBold", monospace; /*Main font*/
-$specialFont: "Monaspace Krypton Light", monospace; /*Accent font*/
+// Font Variables
+$lightFont: "Monaspace Neon Light", monospace; // Secondary font
+$boldFont: "Monaspace Neon ExtraBold", monospace; // Main font
+$specialFont: "Monaspace Krypton Light", monospace; // Accent font
+$scriptFont: "Monaspace Radon Bold Italic", monospace; // Second Accent font
+// Animation Variables
+$transitionCurve: cubic-bezier(0.14, 0.3, 0.6, 1.01);
+$transitionTime: 0.1s;
 
-@mixin titleStyle{
-  font-family: $boldFont;
-  font-size: 5rem;
-}
-
-* {
-  /*General website style properties*/
+* { // General website style properties
   background: transparent;
   color: $text;
   font-family: $boldFont;
@@ -27,51 +25,44 @@ $specialFont: "Monaspace Krypton Light", monospace; /*Accent font*/
   padding: 0;
 }
 
-body {
-  /*Creates a base background color for all elements*/
+body { // Creates a base background color for all elements
   background: $background;
 }
 
-::selection {
-  background: $primary;
-  border-radius: 1rem;
+.containerAll {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 3rem;
 }
 
-.navContainer {
-  /*Contains the entire navigation bar*/
+.navContainer { // Contains the entire navigation bar
   display: flex;
   flex-flow: row wrap;
-  margin: 0rem 0rem 4rem 0rem;
-  margin-bottom: 3rem;
   padding: 2rem $LRPadding 2rem $LRPadding;
   justify-content: space-between;
-  flex-basis: 500px;
   align-items: center;
   top: 0;
   background: $background;
   border-bottom: 1px solid $secondary;
 }
 
-.navItems {
-  /*Container for website hyperlinks in the nav bar*/
+.navItems { // Container for website hyperlinks in the nav bar
   order: 2;
   display: flex;
   flex-flow: row nowrap;
 }
 
-.internLink {
-  /*Internal hyperlink container*/
+.internLink { // Internal hyperlink container
   margin-left: 30px;
   margin-right: 30px;
 }
 
-.internalLinkText {
-  /*text of the link buttons*/
+.internalLinkText { // text of the link buttons
   font-weight: 100;
   margin: 0;
   padding: 1rem 1.5rem 1rem 1.5rem;
   border-radius: 10px;
-  transition: transform 0.1s cubic-bezier(0.14, 0.3, 0.6, 1.01);
+  transition: transform $transitionTime $transitionCurve;
 
   :hover {
     font-family: $boldFont;
@@ -80,27 +71,24 @@ body {
   }
 }
 
-.logoBox {
-  /*Entire Logo*/
+.logoBox { // Entire Logo
   order: 1;
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  transition: transform 0.1s cubic-bezier(0.14, 0.3, 0.6, 1.01);
+  transition: transform $transitionTime $transitionCurve;
 
   :hover {
     transform: scale(1.03);
   }
 }
 
-.logoText {
-  /*Current logo*/
+.logoText { // Current logo
   font-family: $boldFont;
   background: transparent;
 }
 
-.navLinks {
-  /*Container for all external links*/
+.navLinks { // Container for all external links
   order: 3;
   display: flex;
   flex-flow: row nowrap;
@@ -108,15 +96,13 @@ body {
   gap: 0.5rem;
 }
 
-.linkIcon {
-  /*Class for external site icons*/
+.linkIcon { // Class for external site icons
   height: 2rem;
   width: auto;
   background: transparent;
 }
 
-.linkBox {
-  /*Container for each link*/
+.linkBox { // Container for each link
   padding: 1rem;
   background: transparent;
   border-radius: 1rem;
@@ -125,9 +111,9 @@ body {
   align-items: center;
   height: 1.5rem;
   width: 1.5rem;
+  transition: brightness $transitionTime transitionCurve, background $transitionTime $transitionCurve;
 
-  :hover::after {
-    /*tooltip maker*/
+  &:hover::after { // tooltip maker
     display: block;
     position: absolute;
     top: 6rem;
@@ -141,7 +127,6 @@ body {
 }
 
 #link1 {
-  transition: brightness 0.1s cubic-bezier(0.14, 0.3, 0.6, 1.01), background 0.1s cubic-bezier(0.14, 0.3, 0.6, 1.01);
 
   &:hover {
     background: $text;
@@ -153,7 +138,6 @@ body {
 }
 
 #link2 {
-  transition: brightness 0.1s cubic-bezier(0.14, 0.3, 0.6, 1.01), background 0.1s cubic-bezier(0.14, 0.3, 0.6, 1.01);
 
   &:hover {
     background: $text;
@@ -165,19 +149,17 @@ body {
 }
 
 #link3 {
-  transition: brightness 0.1s cubic-bezier(0.14, 0.3, 0.6, 1.01), background 0.1s cubic-bezier(0.14, 0.3, 0.6, 1.01);
+
+  &:hover {
+    background: #0a66c2;
+
+    .linkIcon {
+      filter: brightness(100);
+    }
+  }
 }
 
-#link3:hover {
-  background: #0a66c2;
-}
-
-#link3.linkBox:hover .linkIcon {
-  filter: brightness(100);
-}
-
-.appContainer {
-  /*Container for all app elements*/
+.appContainer { // Container for all app elements
   padding: 0 $LRPadding 0 $LRPadding;
   margin: 0;
   display: flex;
@@ -189,8 +171,9 @@ body {
 
 .aboutMe {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   justify-content: space-between;
+  gap: 3rem;
 }
 
 .aboutMeText {
@@ -209,53 +192,50 @@ body {
   -webkit-text-fill-color: transparent;
 }
 
-.aboutMeTag {
+.aboutMeTag { // Descriptive tag under name
   font-family: $lightFont;
   font-size: 2.5rem;
   color: $text;
 }
 
-.textColorAccent1 {
+.textColorAccent1 { // For developer related things
   color: $primary;
-  background: $accentBackground; //Should be 10% opacity
+  background: $accentBackground;
   padding: 0.5rem 0.2rem 0.5rem 0.2rem;
   font-family: $specialFont;
   border-radius: 0.4rem;
 }
 
-.textColorAccent2 {
+.textColorAccent2 { // For creative related things
   color: $accent;
-  background: $accentBackground; //should be 10% opacity
+  background: $accentBackground;
   padding: 0.5rem 0.2rem 0.5rem 0.2rem;
-  font-family: $lightFont;
+  font-family: $scriptFont;
   border-radius: 0.4rem;
-  -webkit-text-stroke-width: 0.01rem;
+  -webkit-text-stroke-width: 0.1rem;
   -webkit-text-fill-color: transparent;
 }
 
-.aboutMeImage {
-  height: 35rem;
+.aboutMeImage { // Picture of me
+  width: auto;
   border-radius: 5rem;
 }
 
-.appTitle {
-  /*Titles for app sections*/
+.appTitle { // Titles for app sections
   background: none;
   padding: 1rem 0 2.5rem 0;
   font-size: 2rem;
   color: $text;
 }
 
-.portfolioElements {
-  /*Container for all project elements*/
+.portfolioElements { // Container for all project elements
   display: flex;
   flex-flow: row wrap;
   gap: 2rem;
   justify-content: start;
 }
 
-.portfolioElement {
-  /*Container for each project element*/
+.portfolioElement { // Container for each project element
   background: $accentBackground;
   padding: 0rem;
   border-radius: 1rem;
@@ -266,28 +246,24 @@ body {
   height: 400px;
   width: 400px;
   transition: transform 0.1s cubic-bezier(0.14, 0.3, 0.6, 1.01);
+
+  &:hover {
+    transform: scale(1.03);
+
+    .portfolioElementTitle {
+      font-family: $boldFont;
+    }
+  }
 }
 
-.portfolioElement:hover {
-  /*Changes the color of the project container when hover over it*/
-  transform: scale(1.03);
-}
-
-.portfolioElement:hover .portfolioElementTitle {
-  /*Changes the title color when hovering over the element container*/
-  font-family: $boldFont;
-}
-
-.portfolioElementTitle {
-  /*title of all project names*/
+.portfolioElementTitle { // title of all project names
   background: transparent;
   margin-bottom: 1.5rem;
   margin-top: 3rem;
   font-family: $lightFont;
 }
 
-.portfolioElementImage {
-  /*class to make all screenshot images look similar*/
+.portfolioElementImage { // class to make all screenshot images look similar
   max-width: 100%;
   border-radius: 0;
   border-radius: 1rem;
@@ -308,23 +284,21 @@ body {
   border-radius: 1rem;
   box-shadow: 0rem 0rem 2rem rgba(0, 0, 0, 0.07);
   transition: transform 0.1s cubic-bezier(0.14, 0.3, 0.6, 1.01), box-shadow 0.1s cubic-bezier(0.14, 0.3, 0.6, 1.01);
+
+  &:hover {
+    transform: scale(1.03);
+    box-shadow: 0rem 0rem 3rem rgba(255, 255, 255, 0.1);
+  }
 }
 
-.photo:hover {
-  transform: scale(1.03);
-  box-shadow: 0rem 0rem 3rem rgba(255, 255, 255, 0.1);
-}
-
-.footerInternalLinksContainer {
-  /*container for the links in the footer*/
+.footerInternalLinksContainer { // container for the links in the footer
   display: flex;
   flex-flow: row nowrap;
   background: transparent;
   gap: 4rem;
 }
 
-.footer {
-  /*entire footer container*/
+.footer { // entire footer container
   padding: 1rem $LRPadding 0.8rem $LRPadding;
   right: 0;
   left: 0;
@@ -339,8 +313,7 @@ body {
   border-top: 1px solid $secondary;
 }
 
-.footerExternalLinksContainer {
-  /*Container for all external links in the footer*/
+.footerExternalLinksContainer { // Container for all external links in the footer
   background: transparent;
   display: flex;
   flex-flow: row nowrap;
@@ -349,15 +322,13 @@ body {
   gap: 0.2rem;
 }
 
-.footerLinkIcon {
-  /*Class for all icons of links in the footer*/
+.footerLinkIcon { // Class for all icons of links in the footer
   height: 1.5rem;
   background: transparent;
   transition: filter 0.1s cubic-bezier(0.14, 0.3, 0.6, 1.01);
 }
 
-.footerExternalLinkBox {
-  /*Box for each specific link icon*/
+.footerExternalLinkBox { // Box for each specific link icon
   background: transparent;
   margin: 0rem;
   padding: 0;
@@ -369,23 +340,21 @@ body {
   align-items: center;
   justify-content: center;
   transition: background 0.1s cubic-bezier(0.14, 0.3, 0.6, 1.01);
+
+  &:hover {
+    background: $text;
+
+    .footerLinkIcon {
+      filter: brightness(0);
+    }
+
+    #footerLink1 {
+      filter: brightness();
+    }
+  }
 }
 
-.footerExternalLinkBox:hover {
-  /*Changes the background of the buttons when hovering over their parent box*/
-  background: $text;
-}
-
-.footerExternalLinkBox:hover .footerLinkIcon {
-  filter: brightness(0);
-}
-
-.footerExternalLinkBox:hover #footerLink1 {
-  filter: brightness();
-}
-
-.footerCopyrightContainer {
-  /*Contains the copyright elements in the footer*/
+.footerCopyrightContainer { // Contains the copyright elements in the footer
   background: transparent;
   display: flex;
   flex-flow: row nowrap;
@@ -393,14 +362,12 @@ body {
   align-items: center;
 }
 
-.footerCopyrightLogo {
-  /*SL logo for the copyright area*/
+.footerCopyrightLogo { // SL logo for the copyright area
   height: 1.5rem;
   background: transparent;
 }
 
-.footerCopyrightText {
-  /*Copyright Text*/
+.footerCopyrightText { // Copyright Text
   background: transparent;
   padding-left: 5px;
   font-weight: lighter;
