--- a/archive/style.scss
+++ b/archive/style.scss
@@ -9,7 +9,13 @@ $accentBackground: #e8e8f81a; // 10% opacity of $text
 // Padding Variables
 $LRPadding: calc((100vw - 1000px) / 6);
 
-// Font Variables
+// OLD Font Variables
+$lightFont: 'Monaspace Neon Light', monospace; // Secondary font
+$boldFont: 'Monaspace Neon ExtraBold', monospace; // Main font
+$specialFont: 'Monaspace Krypton Light', monospace; // Accent font
+$scriptFont: 'Monaspace Radon Bold Italic', monospace; // Second Accent font
+
+// NEW Font Variables
 @mixin titleStyle {
   font-family: 'Inter', system-ui, -apple-system, sans-serif;
   font-optical-sizing: auto;
@@ -34,47 +40,15 @@ $LRPadding: calc((100vw - 1000px) / 6);
   font-size: 1.8rem;
 }
 
-@mixin boldStyle {
-  font-family: 'Inter', system-ui, -apple-system, sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 600;
-  font-style: normal;
-  font-size: 2.4rem;
-}
-
-@mixin accent1 {
-  // Dev related stuff
-  font-family: monospace;
-  font-weight: 800;
-  color: $primary;
-  // background: $accentBackground;
-  padding: 0rem 0.2rem 0rem 0.2rem;
-  border-radius: 0.4rem;
-}
-
-@mixin accent2 {
-  // Creative related stuff
-  font-family: 'Grandstander', cursive;
-  font-optical-sizing: auto;
-  font-weight: 600;
-  font-style: normal;
-  color: $accent;
-  // background: $accentBackground;
-  padding: 0rem 0.2rem 0rem 0.2rem;
-  border-radius: 0.4rem;
-  -webkit-text-stroke-width: 0.1rem;
-  // -webkit-text-fill-color: transparent;
-}
-
 // Animation Variables
 $transitionCurve: cubic-bezier(0.14, 0.3, 0.6, 1.01);
 $transitionTime: 0.13s;
 
 * {
   // General website style properties
-  @include normalStyle();
   background: transparent;
   color: $text;
+  font-family: $boldFont;
   text-decoration: none;
   margin: 0;
   padding: 0;
@@ -85,35 +59,54 @@ html {
 }
 
 body {
-  font-size: 100%;
+  // Creates a base background color for all elements
   background: $background;
+  font-size: 100%;
 }
 
 .containerAll {
   display: flex;
   flex-flow: column nowrap;
-  gap: 0rem;
-}
-
-.space {
-  // for testing purposes
-  height: 100rem;
+  gap: 3rem;
 }
 
 .navContainer {
   // Contains the entire navigation bar
-  z-index: 1;
-  position: sticky;
   display: flex;
   flex-flow: row wrap;
-  margin: 3rem $LRPadding 0rem $LRPadding;
-  padding: 2rem;
+  padding: 2rem $LRPadding 2rem $LRPadding;
   justify-content: space-between;
   align-items: center;
-  top: 3rem;
-  background: $accentBackground;
-  border-radius: 4rem;
-  backdrop-filter: blur(0.8rem);
+  top: 0;
+  background: $background;
+  border-bottom: 1px solid $secondary;
+}
+
+.navItems {
+  // Container for website hyperlinks in the nav bar
+  order: 2;
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.internLink {
+  // Internal hyperlink container
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.internalLinkText {
+  // text of the link buttons
+  font-weight: 100;
+  padding: 1rem 1.5rem 1rem 1.5rem;
+  border-radius: 10px;
+  transition: transform $transitionTime $transitionCurve;
+
+  :hover {
+    font-family: $boldFont;
+    background: none;
+    transform: scale(1.03);
+  }
 }
 
 .logoBox {
@@ -122,20 +115,22 @@ body {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  margin-left: 2rem;
+  transition: transform $transitionTime $transitionCurve;
+
+  :hover {
+    transform: scale(1.03);
+  }
 }
 
 .logoText {
   // Current logo
-  @include boldStyle();
-  font-size: 2.4rem;
-
+  font-family: $boldFont;
   background: transparent;
 }
 
 .navLinks {
   // Container for all external links
-  order: 2;
+  order: 3;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-around;
@@ -144,16 +139,16 @@ body {
 
 .linkIcon {
   // Class for external site icons
-  height: 2.4rem;
+  height: 2rem;
   width: auto;
   background: transparent;
 }
 
 .linkBox {
   // Container for each link
-  padding: 1.5rem;
+  padding: 1rem;
   background: transparent;
-  border-radius: 50%;
+  border-radius: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -165,14 +160,13 @@ body {
     // tooltip maker
     display: block;
     position: absolute;
-    top: 7rem;
+    top: 6rem;
     align-items: center;
     content: attr(data-tooltip);
     border: none;
     border-radius: 1rem;
     background: $accentBackground;
     padding: 0.5rem;
-    backdrop-filter: blur(1rem);
   }
 }
 
@@ -198,7 +192,7 @@ body {
 
 #link3 {
   &:hover {
-    background: #0a66c2; // LinkedIn Color
+    background: #0a66c2;
 
     .linkIcon {
       filter: brightness(100);
@@ -214,60 +208,145 @@ body {
   justify-content: start;
   gap: 6rem;
   background: $background;
-  margin-top: 7rem;
 }
 
-.introduction {
+.aboutMe {
   display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-  height: 65vh;
+  flex-flow: row nowrap;
+  justify-content: space-between;
   gap: 3rem;
 }
 
-.introductionTitle {
-  @include titleStyle();
-  font-size: 9.6;
+.aboutMeText {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 2rem;
 }
 
-.introductionTag {
-  @include subtitleStyle();
-  text-justify: right;
-}
-
-.textColorAccent1 {
-  // For developer related things
-  @include boldStyle();
-  @include accent1();
-  font-size: 4.8rem;
-}
-
-.textColorAccent2 {
-  // For creative related things
-  @include boldStyle();
-  @include accent2();
-  font-size: 4.8rem;
-}
-
-.textColorAccent3 {
-  @include titleStyle();
+.aboutMeTitle {
+  padding-top: 5rem;
+  font-size: 5rem;
+  font-family: $boldFont;
   background: -webkit-linear-gradient(0deg, $primary 20%, $accent 80%);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.separator {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  align-items: center;
-  height: 10rem;
+.aboutMeTag {
+  // Descriptive tag under name
+  font-family: $lightFont;
+  font-size: 2.5rem;
+  color: $text;
 }
 
-.arrow {
-  height: 2.5rem;
+.textColorAccent1 {
+  // For developer related things
+  color: $primary;
+  background: $accentBackground;
+  padding: 0.5rem 0.2rem 0.5rem 0.2rem;
+  font-family: $specialFont;
+  border-radius: 0.4rem;
+}
+
+.textColorAccent2 {
+  // For creative related things
+  color: $accent;
+  background: $accentBackground;
+  padding: 0.5rem 0.2rem 0.5rem 0.2rem;
+  font-family: $scriptFont;
+  border-radius: 0.4rem;
+  -webkit-text-stroke-width: 0.1rem;
+  -webkit-text-fill-color: transparent;
+}
+
+.aboutMeImage {
+  // Picture of me
+  width: auto;
+  border-radius: 5rem;
+}
+
+.appTitle {
+  // Titles for app sections
+  background: none;
+  padding: 1rem 0 2.5rem 0;
+  font-size: 2rem;
+  color: $text;
+}
+
+.portfolioElements {
+  // Container for all project elements
+  display: flex;
+  flex-flow: row wrap;
+  gap: 2rem;
+  justify-content: start;
+}
+
+.portfolioElement {
+  // Container for each project element
+  background: $accentBackground;
+  padding: 0rem;
+  border-radius: 1rem;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: center;
+  height: 400px;
+  width: 400px;
+  transition: transform $transitionTime $transitionCurve;
+
+  &:hover {
+    transform: scale(1.03);
+
+    .portfolioElementTitle {
+      font-family: $boldFont;
+    }
+  }
+}
+
+.portfolioElementTitle {
+  // title of all project names
+  background: transparent;
+  margin-bottom: 1.5rem;
+  margin-top: 3rem;
+  font-family: $lightFont;
+}
+
+.portfolioElementImage {
+  // class to make all screenshot images look similar
+  max-width: 100%;
+  border-radius: 0;
+  border-radius: 1rem;
+}
+
+.photographyContainer {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: start;
+  gap: 1rem;
+  flex-grow: 0;
+}
+
+.photo {
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
+  border-radius: 1rem;
+  box-shadow: 0rem 0rem 2rem rgba(0, 0, 0, 0.07);
+  transition: transform $transitionTime $transitionCurve, box-shadow $transitionTime $transitionCurve;
+
+  &:hover {
+    transform: scale(1.03);
+    box-shadow: 0rem 0rem 3rem rgba(255, 255, 255, 0.1);
+  }
+}
+
+.footerInternalLinksContainer {
+  // container for the links in the footer
+  display: flex;
+  flex-flow: row nowrap;
+  background: transparent;
+  gap: 4rem;
 }
 
 .footer {
@@ -286,14 +365,14 @@ body {
   border-top: 1px solid $secondary;
 }
 
-.footerLinksContainer {
+.footerExternalLinksContainer {
   // Container for all external links in the footer
   background: transparent;
   display: flex;
   flex-flow: row nowrap;
   align-items: baseline;
-  justify-content: space-around;
-  gap: 0.5rem;
+  justify-content: center;
+  gap: 0.2rem;
 }
 
 .footerLinkIcon {
@@ -303,12 +382,11 @@ body {
   transition: filter $transitionTime $transitionCurve;
 }
 
-.footerLinkBox {
+.footerExternalLinkBox {
   // Box for each specific link icon
   background: transparent;
-  padding: 0.5rem;
   margin: 0rem;
-  border-radius: 50%;
+  border-radius: 10px;
   height: 3rem;
   width: 3rem;
   display: flex;
@@ -339,10 +417,18 @@ body {
   align-items: center;
 }
 
+.footerCopyrightLogo {
+  // SL logo for the copyright area
+  height: 1.5rem;
+  background: transparent;
+}
+
 .footerCopyrightText {
   // Copyright Text
-  @include normalStyle();
   background: transparent;
   padding-left: 5px;
+  font-weight: lighter;
+  font-family: $specialFont;
+  font-size: 0.85rem;
   padding-top: 0.25rem;
 }
