--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,7 +4,7 @@ $background: #030305; // Off Black (Blue tint)
 $primary: #3932c3; // Blue
 $secondary: #2f333c; // Gray
 $accent: #e6a728; // Yellow
-$accentBackground: #e8e8f81a; // 10% opacity of $text
+$accentBackground: #8e8f941a; // 10% opacity gray color
 
 // Padding Variables
 $LRPadding: calc((100vw - 1000px) / 6);
@@ -15,7 +15,11 @@ $LRPadding: calc((100vw - 1000px) / 6);
   font-optical-sizing: auto;
   font-weight: 900;
   font-style: normal;
-  font-size: 12.8rem;
+  font-size: 9vw;
+
+  @media screen(max: 600px) {
+    font-size: 10px;
+  }
 }
 
 @mixin subtitleStyle {
@@ -44,10 +48,10 @@ $LRPadding: calc((100vw - 1000px) / 6);
 
 @mixin accent1 {
   // Dev related stuff
-  font-family: monospace;
-  font-weight: 800;
+  font-family: 'dico-mono', monospace;
+  font-weight: 400;
+  font-style: normal;
   color: $primary;
-  // background: $accentBackground;
   padding: 0rem 0.2rem 0rem 0.2rem;
   border-radius: 0.4rem;
 }
@@ -59,7 +63,6 @@ $LRPadding: calc((100vw - 1000px) / 6);
   font-weight: 600;
   font-style: normal;
   color: $accent;
-  // background: $accentBackground;
   padding: 0rem 0.2rem 0rem 0.2rem;
   border-radius: 0.4rem;
   -webkit-text-stroke-width: 0.1rem;
@@ -89,6 +92,7 @@ body {
   background: $background;
   display: flex;
   flex-flow: column nowrap;
+  gap: 2rem;
 }
 
 .nav {
@@ -110,6 +114,10 @@ body {
   &.navAnimation {
     background: $accentBackground;
   }
+}
+
+.space {
+  height: 100vh;
 }
 
 .logo {
@@ -202,33 +210,32 @@ body {
   }
 }
 
-.appContainer {
-  // Container for all app elements
+.start {
   display: flex;
   flex-flow: column nowrap;
-  justify-content: start;
   gap: 6rem;
-  background: $background;
-  margin-top: 7rem;
+  height: 100vh;
+  border-bottom: 3px solid white;
 }
 
 .introduction {
   display: flex;
   flex-flow: column nowrap;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
-  height: 65vh;
+  height: 43vh;
   gap: 3rem;
+  text-align: center;
 }
 
 .introductionTitle {
   @include titleStyle();
   font-size: 9.6;
+  font-weight: 700;
 }
 
 .introductionTag {
   @include subtitleStyle();
-  text-justify: right;
 }
 
 .textColorAccent1 {
