--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,7 +7,7 @@ $accent: #e6a728; // Yellow
 $accentBackground: #8e8f941a; // 10% opacity gray color
 
 // Padding Variables
-$LRPadding: calc((100vw - 1000px) / 6);
+$LRPadding: calc((100vw - 1000px) / 3);
 
 // Font Variables
 @mixin titleStyle {
@@ -15,11 +15,7 @@ $LRPadding: calc((100vw - 1000px) / 6);
   font-optical-sizing: auto;
   font-weight: 900;
   font-style: normal;
-  font-size: 9vw;
-
-  @media screen(max: 600px) {
-    font-size: 10px;
-  }
+  font-size: 10rem;
 }
 
 @mixin subtitleStyle {
@@ -81,6 +77,7 @@ $transitionTime: 0.13s;
   text-decoration: none;
   margin: 0;
   padding: 0;
+  transition: all $transitionTime $transitionCurve;
 }
 
 html {
@@ -88,11 +85,9 @@ html {
 }
 
 body {
-  font-size: 100%;
   background: $background;
   display: flex;
   flex-flow: column nowrap;
-  gap: 2rem;
 }
 
 .nav {
@@ -109,7 +104,6 @@ body {
   background: transparent;
   border-radius: 4rem;
   backdrop-filter: blur(0.8rem);
-  transition: all $transitionTime $transitionCurve;
 
   &.navAnimation {
     background: $accentBackground;
@@ -163,7 +157,6 @@ body {
   align-items: center;
   height: 1.5rem;
   width: 1.5rem;
-  transition: brightness $transitionTime transitionCurve, background $transitionTime $transitionCurve;
 
   &:hover::after {
     // tooltip maker
@@ -213,9 +206,9 @@ body {
 .start {
   display: flex;
   flex-flow: column nowrap;
-  gap: 6rem;
   height: 100vh;
-  border-bottom: 3px solid white;
+  max-width: 100vw;
+  justify-content: space-between;
 }
 
 .introduction {
@@ -223,7 +216,6 @@ body {
   flex-flow: column nowrap;
   justify-content: flex-end;
   align-items: center;
-  height: 43vh;
   gap: 3rem;
   text-align: center;
 }
@@ -232,6 +224,7 @@ body {
   @include titleStyle();
   font-size: 9.6;
   font-weight: 700;
+  word-break: keep-all;
 }
 
 .introductionTag {
@@ -273,16 +266,66 @@ body {
   width: 5rem;
   padding: 1.5rem;
   border-radius: 50%;
-  transition: all $transitionTime $transitionCurve;
 
   &:hover {
     background: $accentBackground;
   }
 }
 
+.webContent {
+  margin: 0 $LRPadding 0 $LRPadding;
+}
+
+.sectionHeading {
+  @include subtitleStyle();
+  font-size: 3.6rem;
+  font-weight: 500;
+  padding: 5rem 0;
+}
+
+.projectElements {
+  display: grid;
+  grid-auto-rows: minmax(0px, 1fr);
+  gap: 2rem;
+  grid-template-columns: repeat(2, minmax(200px, 1fr));
+  grid-template-rows: repeat(2, minmax(400px, 1fr));
+}
+
+.box {
+  background: $secondary;
+  border-radius: 1rem;
+  width: 100%;
+  height: 100%;
+}
+
+.photographyElements {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(200px, 1fr));
+  grid-template-rows: repeat(3, minmax(400px, 1fr));
+  gap: 2rem;
+}
+
+.pbox {
+  background: $secondary;
+  border-radius: 1rem;
+  width: 100%;
+  height: max(400px);
+  object-fit: cover;
+  overflow: hidden;
+
+  &:hover {
+    transform: scale(1.03);
+  }
+}
+
+.photo {
+  width: 100%;
+  object-fit: cover;
+}
+
 .footer {
   // entire footer container
-  padding: 1rem $LRPadding 0.8rem $LRPadding;
+  padding: 5rem $LRPadding 5rem $LRPadding;
   right: 0;
   left: 0;
   bottom: 0;
@@ -292,7 +335,6 @@ body {
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
-  margin: 4rem 0rem 0rem 0rem;
   border-top: 1px solid $secondary;
 }
 
@@ -310,7 +352,6 @@ body {
   // Class for all icons of links in the footer
   height: 1.5rem;
   background: transparent;
-  transition: filter $transitionTime $transitionCurve;
 }
 
 .footerLinkBox {
@@ -325,7 +366,6 @@ body {
   flex-flow: row nowrap;
   align-items: center;
   justify-content: center;
-  transition: background $transitionTime $transitionCurve;
 
   &:hover {
     background: $text;
